@@ -3,6 +3,7 @@ Fri May 07 09:15:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 	Add methods to log duration of any statements over a certain
 	limit.
 	Tidy instance variables ... prefix mprivate ones with underscore.
+	Install header!
 
 Thu Apr 29 15:20:00 2004  Richard Frith-Macdonald  <rfm@gnu.org>
 
